--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <h2>Sobre Mim</h2>
             <p>Sou Lucas Ansem, programador de 26 anos, natural de Florianópolis. Com mais de 12 anos de experiência em programação, comecei aos 14 anos, destacando-me pela minha dedicação e interesse pela tecnologia. Hoje, com 3 anos de experiência profissional, atuo como programador Python, HTML e MySQL. Tenho experiência em projetos de grande escala e em diversas áreas, incluindo desenvolvimento de sistemas automatizados, bots e bancos de dados.</p>
         </div>
-        <img src="http://108.165.179.48/lucasansem.jpg" alt="Lucas Ansem">
+        <img src="https://lucasansemp.github.io/lucasansem/lucasansem.jpg" alt="Lucas Ansem">
     </div>
 
     <div class="projects animate-on-scroll">
